--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -10292,6 +10292,7 @@ input:checked + .custom-slider:before {
 }
 .filters-reset-anchor {
     color: rgba(13, 110, 253, 1);
+    cursor: pointer !important;
 }
 .filters-body {
     position: relative;
@@ -10644,3 +10645,15 @@ input:checked + .custom-slider:before {
 .accordion.acc-active .highlightText {
     text-decoration: none !important;
 }
+.image-content-space-horizontal {
+    padding: 0 !important;
+    margin: 0 !important;
+    height: fit-content;
+    width: 100%;
+}
+.multimedia-image-horizontal {
+    max-width: 100%;
+    height: auto;
+    border-radius: 4px;
+}
+
