updated pagination styles

--- a/findly-builder/src/app/components/content-source/content-source.component.scss
+++ b/findly-builder/src/app/components/content-source/content-source.component.scss
@@ -251,7 +251,7 @@
                // padding: 20px 0 60px 30px !important;
                 perfect-scrollbar{
                     &.scroll-table{
-                        padding-right: 30px;
+                        // padding-right: 30px;
                     }
                 }
                 .table-view-details{
