--- a/findly-builder/src/app/helpers/components/record-pagination/record-pagination.component.html
+++ b/findly-builder/src/app/helpers/components/record-pagination/record-pagination.component.html
@@ -1,1 +1,12 @@
-<p>record-pagination</p>
+<div class="custom-pagination">
+    <div class="first" placement="bottom-center" tooltipClass="tooltip_custom_acc" ngbTooltip="First"><img src="assets/icons/pagination/first-arrow.svg"></div>
+    <div class="p-left" placement="top-center" tooltipClass="tooltip_custom_acc" ngbTooltip="Previous"><img src="assets/icons/pagination/previous-left.svg"></div>
+    <div class="page-title">Page</div>
+    <div class="kr-sg-input-text">       
+        <input type="text" class="input-text" value="63">      
+    </div>
+    <div class="divider">of</div>
+    <div class="last-page-number">82</div>
+    <div class="last" placement="top-center" tooltipClass="tooltip_custom_acc" ngbTooltip="Next"><img src="assets/icons/pagination/right-single.svg"></div>
+    <div class="p-right" placement="bottom-center" tooltipClass="tooltip_custom_acc" ngbTooltip="Last"><img src="assets/icons/pagination/right-double.svg"></div>
+</div>
