--- a/findly-builder/src/app/components/content-source/content-source.component.scss
+++ b/findly-builder/src/app/components/content-source/content-source.component.scss
@@ -1022,3 +1022,10 @@
             }
         }        
     }
+    .run-percentageDone {
+        position: absolute;
+        left: 100px;
+        top: 2px;
+        font-size: 10px;
+        color: #a6bdda;
+    }
