--- a/findly-builder/src/app/shared/kr-modal/kr-modal.component.scss
+++ b/findly-builder/src/app/shared/kr-modal/kr-modal.component.scss
@@ -18,6 +18,12 @@
     &.kr-center{
         animation-name: example;
         animation-duration: 0.3s;
+        &.smallModal{
+            .modal-dialog{
+                max-width: 50% !important;
+                height: 83%;
+            }
+        }
         .modal-dialog{
             max-width: 80% !important;
             margin: 0 !important;
