--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -382,7 +382,7 @@
                   <div
                     *ngIf="crwalObject && crwalObject.advanceOpts && crwalObject.advanceOpts.allowedURLs.length && crwalObject.advanceOpts.allowedOpt"
                     class="w-100">
-                    <div class="allow-urls-sec row allow-urlBox padd" *ngFor="let rec of crwalObject.advanceOpts.allowedURLs;let i = index">
+                    <div class="allow-urls-sec row allow-urlBox padd pl-0 pr-0" *ngFor="let rec of crwalObject.advanceOpts.allowedURLs;let i = index">
                       <div class="col-2 p-0 title"></div>
                         <div class="col-10 p-0 d-flex align-items-center">
                           <div class="kr-sg-dropdowns">
@@ -441,7 +441,7 @@
                             src="assets/images/close-cross.svg"></span>
                       </div> -->
                     <!-- </span> -->
-                    <div class="allow-urls-sec row allow-urlBox padd" *ngFor="let rec of crwalObject.advanceOpts.blockedURLs;let i = index">
+                    <div class="allow-urls-sec row allow-urlBox padd pl-0 pr-0" *ngFor="let rec of crwalObject.advanceOpts.blockedURLs;let i = index">
                       <div class="col-2 p-0 title"></div>
                         <div class="col-10 p-0 d-flex align-items-center">
                           <div class="kr-sg-dropdowns">
