--- a/findly-builder/src/app/components/index/index.component.scss
+++ b/findly-builder/src/app/components/index/index.component.scss
@@ -577,3 +577,9 @@
         padding-top: 10px;
     }
 } 
+::ng-deep.addFieldModalPop {
+    .modal-dialog{
+        max-width: 70% !important;
+        height: 80% !important;
+    }
+}
