--- a/findly-builder/src/app/components/metrics/metrics.component.html
+++ b/findly-builder/src/app/components/metrics/metrics.component.html
@@ -3,27 +3,22 @@
         <div class="tab-name" [ngClass] = "{'active': slider === 0}" (click)="tab(0)">Overview</div>
         <div class="tab-name" [ngClass] = "{'active': slider === 1}" (click)="tab(1)">User Engagement</div>
         <div class="tab-name" [ngClass] = "{'active': slider === 2}" (click)="tab(2)">Popular</div>
-    </div>
-    <perfect-scrollbar class="scroll_content">
-        <div class="filters-date-sec">
-            <div class="col-2 p-0">
-                <div class="small-tab-sec" *ngIf="slider === 2">
-                    <div class="tab-name active-tab">Searches</div>
-                    <div class="tab-name">Results</div>
+    </div> 
+    <perfect-scrollbar class="scroll_content">  
+        <div class="filters-date-sec"> 
+            <div class="col-2 p-0"> 
+                <div class="small-tab-sec" *ngIf="slider === 2"> 
+                    <div class="tab-name active-tab">Searches</div> 
+                    <div class="tab-name">Results</div>   
                 </div>
             </div>            
             <div class="d-flex col-10 p-0 justify-content-end align-items-center">
-                <!-- <div class="date-info m-0" *ngIf="slider === 2">
+           <div class="date-info m-0" *ngIf="slider === 2">
                     <span class="pr-1">Searches</span>
                     <span class="pr-1">Results</span>
                 </div> -->
-                 <!-- <div class="date-info">All conversation sessions between <span class="bold-text">01-08-2020 to 07-08-2020</span> </div> 01-08-2020 to 07-08-2020 -->
+              <div class="date-info">All conversation sessions between <span class="bold-text">01-08-2020 to 07-08-2020</span> </div> 01-08-2020 to 07-08-2020 -->
                 
-                <div class="date-select">
-                    <span class="day time active">24 Hrs</span>
-                    <span class="week time ">7 Days</span>
-                    <span class="custom time">Custom</span>
-                </div>
                 <div class="export"><img src="assets/icons/export.svg"></div>
             </div>
         </div>
