--- a/findly-builder/src/app/components/search-insights/search-insights.component.scss
+++ b/findly-builder/src/app/components/search-insights/search-insights.component.scss
@@ -57,6 +57,10 @@
                     background: #0D6EFD;
                     color: #ffffff;
                 }
+                &.selected{
+                    background: #0D6EFD;
+                    color: #ffffff;
+                }
             }
         }
         .export{
