--- a/findly-builder/src/app/components/user-engagement/user-engagement.component.scss
+++ b/findly-builder/src/app/components/user-engagement/user-engagement.component.scss
@@ -53,7 +53,7 @@
                 padding: 3px 10px;                
                 display: inline-block;
                 cursor: pointer;
-                &.active{
+                &.selected{
                     background: #0D6EFD;
                     color: #ffffff;
                 }
