--- a/findly-builder/src/app/helpers/components/confirmation-dialog/confirmation-dialog.component.html
+++ b/findly-builder/src/app/helpers/components/confirmation-dialog/confirmation-dialog.component.html
@@ -1,5 +1,5 @@
 
-<div class="manage-findlyion-popup">
+<div class="manage-findlyion-popup" *ngIf="!data.confirmationPopUp">
   <div class="m-header text-center">{{data.title}}</div>
   <div class="m-body">
     <div class="info-text">{{data.text}}</div>
@@ -9,6 +9,27 @@
   <div class="m-footer">
     <button *ngFor="let item of data.buttons" [disabled]="isSelected" (click)="onClickOption(item)" class="kr-sg-button-primary btn_md" [ngClass]="{'kr-sg-button-secondary': (item.label==='Cancel') || (item.secondaryBtn),'dangerBtn':item.type==='danger'}">
       {{item.label}}
+      <div class="loader-in-button ml-2"*ngIf="item.key === 'save' && isSelected" style="display: inline-block"><img src="assets/images/icons/fa-spinner.svg"></div>
+    </button>
+  </div>
+</div>
+
+<div class="manage-findlyion-popup" *ngIf="data.confirmationPopUp">
+  <div class="m-header text-center">Do you really want to delete?</div>
+  <div class="m-body">
+    <div class="info-text">Deleting Question field will impact Facets, Weights and Rules and Personalization as it is being used in all the three Search Configuration.</div>
+    <!-- <div class="info-text">{{data.text1}} <span class="clickable-text" (click)="onClickLearnMore()" *ngIf="showLearnMore">Learn More</span></div> -->
+    <!-- <div class="info-text" *ngIf="data.text2">{{data.text2}}</div> -->
+  </div>
+  <div class="m-footer">
+    <!-- <button class="kr-sg-button-secondary btn_lg ml-2" (click)="onClickOption(item)" >Cancel</button>
+    <button class="kr-sg-button-primary btn_lg ml-2" (click)="deleteTraitsGroup(index,traitGroup,$event)">Proceed</button> -->
+
+    <button *ngFor="let item of data.buttons" [disabled]="isSelected" (click)="onClickOption(item)" class="kr-sg-button-primary btn_md" [ngClass]="{'kr-sg-button-secondary': (item.label==='Cancel') || (item.primaryBtn),'dangerBtn':item.label==='Proceed'}">
+      <span *ngIf="item.label=='Delete'; else cancel"> Proceed</span>
+      <ng-template #cancel>
+         {{item.label}} 
+      </ng-template>
       <div class="loader-in-button ml-2"*ngIf="item.key === 'save' && isSelected" style="display: inline-block"><img src="assets/images/icons/fa-spinner.svg"></div>
     </button>
   </div>
