--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -521,7 +521,7 @@
                 </div>
                 <div *ngIf="selectedSource.advanceSettings && selectedSource.advanceSettings.allowedOpt">
                   <div *ngFor="let allow of selectedSource.advanceSettings.allowedURLs;let i = index"
-                    class="allow-urls-sec row allow-urlBox m1010">
+                    class="allow-urls-sec row allow-urlBox m1010 pl-0 pr-0">
                     <div class="col-2 p-0 title"></div>
                         <div class="col-10 p-0 d-flex align-items-center">
                           <div class="kr-sg-dropdowns">
@@ -573,7 +573,7 @@
                 </div>
                 <div *ngIf="selectedSource.advanceSettings && selectedSource.advanceSettings.blockedOpt">
                   <div *ngFor="let allow of selectedSource.advanceSettings.blockedURLs;let i = index"
-                    class="allow-urls-sec row allow-urlBox m1010 ">
+                    class="allow-urls-sec row allow-urlBox m1010 pl-0 pr-0">
                     <div class="col-2 p-0 title"></div>
                     <div class="col-10 p-0 d-flex align-items-center">
                       <div class="kr-sg-dropdowns">
