--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -117,50 +117,14 @@
                                         <div class="d-flex align-items-center justify-content-end">
                                             <button class="kr-sg-button-secondary btn_lg text-danger pl-2 pr-2" (click) = "restore(selectedRecord)"> <span><img src="assets/icons/restore.svg"></span> {{'resultRanking.restore' | translate}} </button>
                                         </div>
-                                    </div>
-                                    <!-- <perfect-scrollbar class="perfect-scroll-result-rank">
-                                        
-                                    </perfect-scrollbar> -->
+                                    </div>                                    
                                     
                                 </div>
                             </div>
-                        <perfect-scrollbar class="train-questions-body-scroll perfect-scroll-result-rank" #resultRankingRightContainer>               
+                        <perfect-scrollbar class="train-questions-body-scroll" #resultRankingRightContainer>               
                             <div class="body-content" id="resultsRankingRight">
-                                <div class="body-top-content">
-                                    <!-- <div class="accordion-result-rank" *ngFor="let actLog of actionLogData;let i = index">
-                                        <a href="#demo_{{i}}" data-toggle="collapse" class="accordion-rr"  (click)="toggle(icontoggle, i,actLog.selected)">
-                                            <div class="mb-0">
-                                             <div class="row">
-                                                 <img *ngIf ="!actLog.selected" src="assets/icons/accordian-close.svg" class="ml-8" (click)="$event.stopPropagation()"> 
-                                                 <img *ngIf ="actLog.selected" src="assets/icons/caretDown.svg" class="ml-8" (click)="$event.stopPropagation()" >
-                                                 <div class=" col-lg-7" [ngClass] = " actLog.selected ? 'action-header active-header' : 'action-header wrapper' ">{{actLog.header}}</div> 
-                                                <div class="action-header pl-pr-0  col-lg-2" >
-                                                    <img src="assets/icons/help.svg" class="ml-1"> 
-                                                    <span class="status">{{actLog.status}}</span> 
-                                                </div> 
-                                                <div class="time col-lg-2">{{actLog.time}}</div> 
-                                             </div>
-                                            </div>
-                                        </a>
-                                        <div id="demo_{{i}}" class="collapse">
-                                            <p class="action-desc"> {{actLog.description}} </p>  
-                                            <button class="btn-rem">Remove</button>
-                                            <div class="action-on-this" (click)="toggleAction(icontoggle, i,actLog.drop)">
-                                               <span class="arrow" [ngClass] = " actLog.drop ?  'up' : 'down'"></span>
-                                               <span class="arr-txt">PAST ACTION ON THIS ITEM</span>
-                                            </div>
-                                            <div class="drop-list" *ngIf="actLog.drop">
-                                                <ul class="list-p">
-                                                    <li class="list-c"><span class="arr-txt">Result Boosted</span> <span class="arr-t">4h ago</span></li>
-                                                    <li class="list-c"><span class="arr-txt">Result Pinned</span> <span class="arr-t">2w ago</span></li>
-                                                    <li class="list-c"><span class="arr-txt">Result Hidden</span> <span class="arr-t">3wh ago</span></li>
-                                                    <li class="list-c"><span class="arr-txt">Result Unhidden</span> <span class="arr-t">4d ago</span></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                 </div> -->
-                                 
-                                    <div class="accordion-result-rank" *ngFor="let actLog of actionLogData;let i = index" (click)="toggle(icontoggle, actLog.selected)">
+                                <div class="body-top-content">                                    
+                                    <div class="accordion-result-rank d-none" *ngFor="let actLog of actionLogData;let i = index" (click)="toggle(icontoggle, actLog.selected)">
                                         <div *ngIf="actLog.target">
                                         <a href="#demo_{{i}}" data-toggle="collapse" class="accordion-rr"  >
                                             <div class="mb-0">
@@ -201,8 +165,110 @@
                                             </div>
                                         </div>
                                     </div>
+                                    </div> 
+                                    
+                                    
+                                    <div id="accordion" class="accordion-sec">
+                                        <div class="acc-card">
+                                          <div class="acc-card-header">
+                                            <div class="collapsed acc-card-link" data-toggle="collapse" href="#collapseOne">
+                                                <div class="row m-0 row_data">
+                                                    <div class="col-8 title">Can I make Credit Card payments via a savings account instantly?</div>
+                                                    <div class="col-1"><img src="assets/icons/resultranking/copy.svg" class="cursor-pointer"></div>
+                                                    <div class="col-1"><img src="assets/icons/resultranking/pin.svg" class="cursor-pointer"></div>
+                                                    <div class="col-2 text-right time-stamp">2h ago</div>
+                                                </div>
+                                            </div>
+                                          </div>
+                                          <div id="collapseOne" class="collapse" data-parent="#accordion">
+                                            <div class="card-body">
+                                                <div class="info-card">You can set up a Standing Instruction to debit your Credit Card Payments easily via phone or laptop as per your acount.</div>
+                                                <div class="text-right mt-3">
+                                                  <button class="kr-sg-button-secondary btn_lg">Remove</button>
+                                                </div>
+                                                <div id="accordion" class="inside-acc">
+                                                    <div class="inside-acc-card">
+                                                    <div class="inside-acc-card-header">
+                                                        <div class="collapsed inside-acc-card-link" data-toggle="collapse" href="#collapse1">
+                                                            PAST ACTIONS ON THIS ITEM
+                                                        </div>
+                                                    </div>
+                                                    <div id="collapse1" class="collapse" data-parent="#accordion">
+                                                        <div class="inside-card-body">
+                                                            <div class="row m-0 inside-row-content">
+                                                                <div class="col-8 inside-title">Result Boosted</div>
+                                                                <div class="col-2 status-click"><img src="assets/icons/resultranking/export-up.svg" class="cursor-pointer">4x</div>
+                                                                <div class="col-2 text-right time-stamp">4h ago</div>
+                                                            </div>
+                                                            <div class="row m-0 inside-row-content">
+                                                                <div class="col-8 inside-title">Result Unhidden</div>
+                                                                <div class="col-2 status-click"><img src="assets/icons/resultranking/eye.svg" class="cursor-pointer"></div>
+                                                                <div class="col-2 text-right time-stamp">4h ago</div>
+                                                            </div>
+                                                            <div class="row m-0 inside-row-content">
+                                                                <div class="col-8 inside-title">Result Hidden</div>
+                                                                <div class="col-2 status-click"><img src="assets/icons/resultranking/eye.svg" class="cursor-pointer"></div>
+                                                                <div class="col-2 text-right time-stamp">4h ago</div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    </div>                                            
+                                                
+                                                </div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                        <div class="acc-card">
+                                          <div class="acc-card-header">
+                                            <div class="collapsed acc-card-link" data-toggle="collapse" href="#collapseTwo">
+                                                <div class="row m-0 row_data">
+                                                    <div class="col-8 title">Can I make Credit Card payments via a savings account instantly?</div>
+                                                    <div class="col-1"><img src="assets/icons/resultranking/copy.svg"></div>
+                                                    <div class="col-1"><img src="assets/icons/resultranking/pin.svg"></div>
+                                                    <div class="col-2 text-right time-stamp">2h ago</div>
+                                                </div>
+                                            </div>
+                                          </div>
+                                          <div id="collapseTwo" class="collapse" data-parent="#accordion">
+                                            <div class="card-body">
+                                                <div class="info-card">You can set up a Standing Instruction to debit your Credit Card Payments easily via phone or laptop as per your acount.</div>
+                                                <div class="text-right mt-3">
+                                                  <button class="kr-sg-button-secondary btn_lg">Remove</button>
+                                                </div>
+                                                <div id="accordion" class="inside-acc">
+                                                    <div class="inside-acc-card">
+                                                    <div class="inside-acc-card-header">
+                                                        <div class="collapsed inside-acc-card-link" data-toggle="collapse" href="#collapse1">
+                                                            PAST ACTIONS ON THIS ITEM
+                                                        </div>
+                                                    </div>
+                                                    <div id="collapse1" class="collapse" data-parent="#accordion">
+                                                        <div class="inside-card-body">
+                                                            <div class="row m-0 inside-row-content">
+                                                                <div class="col-8 inside-title">Result Boosted</div>
+                                                                <div class="col-2 status-click"><img src="assets/icons/resultranking/export-up.svg" class="cursor-pointer">4x</div>
+                                                                <div class="col-2 text-right time-stamp">4h ago</div>
+                                                            </div>
+                                                            <div class="row m-0 inside-row-content">
+                                                                <div class="col-8 inside-title">Result Unhidden</div>
+                                                                <div class="col-2 status-click"><img src="assets/icons/resultranking/eye.svg" class="cursor-pointer"></div>
+                                                                <div class="col-2 text-right time-stamp">4h ago</div>
+                                                            </div>
+                                                            <div class="row m-0 inside-row-content">
+                                                                <div class="col-8 inside-title">Result Hidden</div>
+                                                                <div class="col-2 status-click"><img src="assets/icons/resultranking/eye.svg" class="cursor-pointer"></div>
+                                                                <div class="col-2 text-right time-stamp">4h ago</div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    </div>                                            
+                                                
+                                                </div>
+                                            </div>
+                                          </div>
+                                        </div>                                      
                                     </div>
-                                 <!-- </div> -->
+
                                 </div>
                             </div>
                         </perfect-scrollbar>
